# llm_synthdatagen

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: __init__.py  main.py
